align-self center used to prevent stretching

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -23,6 +23,7 @@
     flex: none;
     height: auto;
     width: 100%;
+    align-self: center;
 }
 .gallery-img-div {
     flex: none;
